make package public

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "peerDependencies": {
         "react-native": "^0.13.2"
     },
-    "private": "true",
+    "private": "false",
     "repository": {
         "type": "git",
         "url": "github.com/wynnej1983/react-native-appirater"
@@ -25,5 +25,5 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     },
-    "version": "0.0.1"
+    "version": "1.0.0"
 }
